force-app/main/default/objects/Data_Dictionary_Object__c/Data_Dictionary_Object__c.object-meta.xml
<CustomObject>
    <description>Represents standard and custom objects, custom settings, metadata, and platform events.</description>
    <label>Data Dictionary Object</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Dictionary Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>