force-app/main/default/objects/Data_Dictionary_Object__c/fields/Durable_ID__c.field-meta.xml
<CustomField>
    <fullName>Durable_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Durable ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>