force-app/main/default/objects/Data_Dictionary_Object__c/fields/External_Sharing_Model__c.field-meta.xml
<CustomField>
    <fullName>External_Sharing_Model__c</fullName>
    <label>External Sharing Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>