force-app/main/default/objects/Data_Dictionary_Object__c/fields/Has_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Has_Record_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the object uses Record Types.</inlineHelpText>
    <label>Has Record Types</label>
    <type>Checkbox</type>
</CustomField>