force-app/main/default/objects/Data_Dictionary_Object__c/fields/Internal_Sharing_Model__c.field-meta.xml
<CustomField>
    <fullName>Internal_Sharing_Model__c</fullName>
    <label>Internal Sharing Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>