force-app/main/default/objects/Data_Dictionary_Object__c/fields/Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed__c</fullName>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>