force-app/main/default/objects/Data_Dictionary_Object__c/fields/Metadata_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Note, creation information is only available for custom objects.</inlineHelpText>
    <label>Metadata Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Dictionary_Objects_Created</relationshipName>
    <type>Lookup</type>
</CustomField>