force-app/main/default/objects/Data_Dictionary_Object__c/fields/Metadata_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Created_Date__c</fullName>
    <label>Metadata Created Date</label>
    <type>DateTime</type>
</CustomField>