force-app/main/default/objects/Data_Dictionary_Object__c/fields/Metadata_Last_Modified_by__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Last_Modified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metadata Last Modified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Dictionary_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>