force-app/main/default/objects/Data_Dictionary_Object__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>