force-app/main/default/objects/Data_Dictionary_Object__c/fields/Permission_Set_Groups_Delete__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups_Delete__c</fullName>
    <label>Permission Set Groups (Delete)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>