force-app/main/default/objects/Data_Dictionary_Object__c/fields/Permission_Set_Groups_View_All__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups_View_All__c</fullName>
    <label>Permission Set Groups (View All)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>