force-app/main/default/objects/Data_Dictionary_Object__c/fields/Permission_Sets_Create__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Create__c</fullName>
    <label>Permission Sets (Create)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>