force-app/main/default/objects/Data_Dictionary_Object__c/fields/Permission_Sets_Delete__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Delete__c</fullName>
    <label>Permission Sets (Delete)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>