force-app/main/default/objects/Data_Dictionary_Object__c/fields/Profiles_Create__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Create__c</fullName>
    <label>Profiles (Create)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>