force-app/main/default/objects/Data_Dictionary_Object__c/fields/Profiles_Delete__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Delete__c</fullName>
    <label>Profiles (Delete)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>