force-app/main/default/objects/Data_Dictionary_Object__c/fields/Profiles_Modify_All__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Modify_All__c</fullName>
    <label>Profiles (Modify All)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>