force-app/main/default/objects/Data_Dictionary_Object__c/fields/Profiles_Read__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Read__c</fullName>
    <label>Profiles (Read)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>