force-app/main/default/objects/Data_Dictionary_Object__c/fields/Profiles_View_All__c.field-meta.xml
<CustomField>
    <fullName>Profiles_View_All__c</fullName>
    <label>Profiles (View All)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>