force-app/main/default/objects/Data_Dictionary_Object__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <inlineHelpText>Total number of records for this object, as of the last sync.</inlineHelpText>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>