force-app/main/default/objects/Data_Dictionary_Object__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <label>Record Types</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>