force-app/main/default/objects/Data_Dictionary_Object__c/fields/Record_Types_Details__c.field-meta.xml
<CustomField>
    <fullName>Record_Types_Details__c</fullName>
    <label>Record Types Details</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>