force-app/main/default/objects/Data_Dictionary_Object__c/fields/Sync_Messages__c.field-meta.xml
<CustomField>
    <fullName>Sync_Messages__c</fullName>
    <label>Sync Messages</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>