force-app/main/default/objects/Data_Dictionary_Object__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Object</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type</fullName>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
            <value>
                <fullName>Big Object</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>